# nsm

./: Makefile  go.mod  go.sum
cmd/nsm/: main.go
cmd/setup/: main.go
examples/java/: application.java
examples/java/cmd/: nsm.sh
examples/react-vite-typescript/: package-lock.json  package.json
examples/react-vite-typescript/cmd/: nsm.sh
examples/react-vite-typescript/src/: App.tsx
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/rust/templates/: index.html
internal/app/: app.go
internal/cert/: manager.go
internal/config/: config.go  project.go
internal/dns/: resolver.go
internal/platform/: ports.go
internal/project/: runner.go
internal/server/: proxy.go
internal/setup/: config.go  example.go  install.go  setup.go  ui.go
internal/ui/: components.go  styles.go  views.go
pkg/logger/: logger.go
pkg/utils/: utils.go
